--- a/popup.html
+++ b/popup.html
@@ -3,12 +3,13 @@
 
 <div class="container ">
   <div class="flex-container">
-    <div class="title flex-child">Saved Articles (<span id="totalBookmarks"></span>)</div>
-   
+    <div class="title">Report Maker</div>
+    
+    <div class="total flex-child-top">Total :<span id="totalBookmarks"></span></div>
   </div>
   <div class="bookmarks" id="bookmarks"></div>
 </div>
 <div class="flex-container">
-  <button id="myBtn" type="button" class="button-40 flex-child">Download Report</button>
-  <button id="clearBtn" type="button" class="button-40 flex-child" style="background-color: rgb(221, 103, 103);">Clear</button>
+  <button id="myBtn" type="button" class="button-38 flex-child" style="color:aliceblue;background-color: #4169E1;">Download Report</button>
+  <button id="clearBtn" type="button" class="button-38 flex-child" style="color: rgb(84, 84, 84);background-color:#F9F8FF;">Clear</button>
 </div>
