--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,13 @@
     
     <div class="total flex-child-top">Total :<span id="totalBookmarks"></span></div>
   </div>
+  <div class="search-container">
+    <form action="" class="search-bar ">
+      <input  type="text" id="search-box" placeholder="search an article" name="q">
+      <button  type="submit"><img src="assets/search.png" alt="search"></button>
+    </form>
+  </div>
+  
   <div class="bookmarks" id="bookmarks"></div>
 </div>
 <div class="flex-container">
